--- a/index.html
+++ b/index.html
@@ -4,9 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        header, section {
+            padding: 20px;
+            text-align: center;
+        }
+        header {
+            background-color: #333;
+            color: white;
+        }
+        section {
+            border-bottom: 1px solid #ccc;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to My Portfolio</h1>
-    <p>This is a work in progress!</p>
+    <header>
+        <h1>Welcome to My Portfolio</h1>
+        <p>Your tagline here</p>
+    </header>
+    <section id="about">
+    <h2>About Me</h2>
+    <p>Hello! I’m a dedicated project manager with experience in IT, vendor transitions, and process improvement. I’m passionate about delivering results and driving efficiency.</p>
+</section>
+    <section id="projects">
+    <h2>Projects</h2>
+    <div>
+        <h3>Vendor Transition Project</h3>
+        <p>Led the migration of restaurant devices from Maas360 to Jamf, reducing IT costs by 10% and improving operational efficiency by 15%.</p>
+    </div>
+    <!-- Add more project descriptions here -->
+</section>
+<section id="skills">
+    <h2>Skills</h2>
+    <ul>
+        <li>Project Management</li>
+        <li>Stakeholder Communication</li>
+        <li>Agile Methodology</li>
+        <li>Jira, Trello, Jamf, Salesforce</li>
+    </ul>
+</section>
+<section id="contact">
+    <h2>Contact Me</h2>
+    <p>Email: <a href="mailto:trushaun.bell1@gmail.com">trushaun.bell1@gmail.com</a></p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></p>
+</section>
+
 </body>
 </html>
