Added Linkedin info

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <section id="contact">
     <h2>Contact Me</h2>
     <p>Email: <a href="mailto:trushaun.bell1@gmail.com">trushaun.bell1@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/trubell-techpm" target="_blank">linkedin.com/in/trubell-techpm</a></p>
 </section>
 
 </body>
