--- a/index.html
+++ b/index.html
@@ -33,22 +33,56 @@
     <p>Hello! I’m a dedicated project manager with experience in IT, vendor transitions, and process improvement. I’m passionate about delivering results and driving efficiency.</p>
 </section>
     <section id="projects">
-    <h2>Projects</h2>
-    <div>
+        <h2>Projects</h2>
+
+    <!-- Granite City Food & Brewery -->
+    <div class="project">
         <h3>Vendor Transition Project</h3>
-        <p>Led the migration of restaurant devices from Maas360 to Jamf, reducing IT costs by 10% and improving operational efficiency by 15%.</p>
+        <p><strong>Company:</strong> Granite City Food & Brewery</p>
+        <p><strong>Role:</strong> IT Field Support Technician</p>
+        <p><strong>Summary:</strong> Led a vendor transition project to migrate restaurant devices from Maas360 to Jamf, improving device management and reducing IT operational costs by 10%.</p>
+        <ul>
+            <li>Took initiative to identify lack of remote mobile device management capabilities.</li>
+            <li>Proposed project to management to conduct proof of concept for various MDM vendors.</li>
+            <li>Created presentation to C-level management for project approval and kickoff.</li>
+            <li>Developed company-wide communications and deployment plan to roll out new MDM profiles to devices across 30+ restaurant locations.</li>
+        </ul>
+        <p><strong>Results:</strong> Improved management of remote devices, resulting in a 15% improvement in restaurant operations and a 10% reduction in IT operational costs.</p>
     </div>
-    <!-- Add more project descriptions here -->
+
+    <!-- Jamf Cloud Migration -->
+    <div class="project">
+        <h3>Cloud Migration Project</h3>
+        <p><strong>Company:</strong> Jamf Software LLC</p>
+        <p><strong>Role:</strong> Professional Services Project Manager</p>
+        <p><strong>Summary:</strong> Led an external migration project of on-premise database server, managing 10,000+ devices to Jamf Cloud, and suggested additional Jamf services, resulting in $250,000 in additional sales.</p>
+        <ul>
+            <li>Analyzed and determined the best migration path for seamless database migration to the cloud server.</li>
+            <li>Recommended processes to migrate devices without requiring physical access to each device.</li>
+            <li>Suggested additional services for best-use practices, user management, and device management practices, leading to improved client operations.</li>
+            <li>Maintained communication with external stakeholders to provide status updates and ensure timely project completion.</li>
+        </ul>
+        <p><strong>Results:</strong> Successfully migrated the database and over 10,000 devices to Jamf Cloud. Generated $250,000 in additional sales through recommended services.</p>
+        <p><strong>Tools Used:</strong> Hybrid Waterfall/Agile Methodology, AWS, Atlassian Jira and Confluence, Microsoft Office Suite, Salesforce.</p>
+    </div>
+
+    <!-- Jamf Vendor Transition -->
+    <div class="project">
+        <h3>Vendor Transition Project</h3>
+        <p><strong>Company:</strong> Jamf Software LLC</p>
+        <p><strong>Role:</strong> Operations Project Manager</p>
+        <p><strong>Summary:</strong> Led an internal company-wide project to transition project management software from Jira Cloud to ServiceNow PPM, streamlining project and desktop support ticketing operations.</p>
+        <ul>
+            <li>Managed the transition from Jira Cloud to ServiceNow PPM, collaborating with engineers to create dashboards for reporting and status.</li>
+            <li>Created presentations for cross-functional management and C-level executives, highlighting risks, blockers, and milestones.</li>
+            <li>Led training sessions for end users, developing documentation and FAQs for future reference.</li>
+        </ul>
+        <p><strong>Results:</strong> Successfully migrated to ServiceNow PPM, improving project and help desk ticketing processes.</p>
+        <p><strong>Tools Used:</strong> Agile Methodology, Atlassian Jira, ServiceNow PPM, Microsoft Office Suite, Keynote.</p>
+    </div>
+
 </section>
-<section id="skills">
-    <h2>Skills</h2>
-    <ul>
-        <li>Project Management</li>
-        <li>Stakeholder Communication</li>
-        <li>Agile Methodology</li>
-        <li>Jira, Trello, Jamf, Salesforce</li>
-    </ul>
-</section>
+    
 <section id="contact">
     <h2>Contact Me</h2>
     <p>Email: <a href="mailto:trushaun.bell1@gmail.com">trushaun.bell1@gmail.com</a></p>
