Adding Style.css to index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="Style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
@@ -33,12 +34,70 @@
     <p>Hello! I’m a dedicated project manager with experience in IT, vendor transitions, and process improvement. I’m passionate about delivering results and driving efficiency.</p>
 </section>
     <section id="projects">
+    <h2>Projects</h2>
+    <div class="projects-container">
+
+        <!-- Granite City Project -->
+        <div class="project-card">
+            <div class="project-card-inner">
+                <div class="project-card-front">
+                    <h3>Vendor Transition Project</h3>
+                    <p>Granite City Food & Brewery</p>
+                </div>
+                <div class="project-card-back">
+                    <p>Improved device management and reduced IT operational costs by 10%.</p>
+                    <p>Role: IT Field Support Technician</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Jamf Cloud Migration -->
+        <div class="project-card">
+            <div class="project-card-inner">
+                <div class="project-card-front">
+                    <h3>Cloud Migration Project</h3>
+                    <p>Jamf Software LLC</p>
+                </div>
+                <div class="project-card-back">
+                    <p>Successfully migrated 10,000+ devices and generated $250,000 in sales.</p>
+                    <p>Role: Professional Services Project Manager</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Jamf Vendor Transition -->
+        <div class="project-card">
+            <div class="project-card-inner">
+                <div class="project-card-front">
+                    <h3>Vendor Transition Project</h3>
+                    <p>Jamf Software LLC</p>
+                </div>
+                <div class="project-card-back">
+                    <p>Migrated to ServiceNow PPM, streamlining operations.</p>
+                    <p>Role: Operations Project Manager</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</section>
+
+
+ <!-- Commented the below out while I test the style.css that I'm creating
+    
+    <section id="projects">
         <h2>Projects</h2>
 
+    <!-- Commented the below out while I test the style.css that I'm creating -->
     <!-- Granite City Food & Brewery -->
-    <div class="project">
+    <!--<div class="projects-container">
+        <div class="project-card">
+            <div class="project-card-inner">
+                <div class="project-card-front">
         <h3>Vendor Transition Project</h3>
         <p><strong>Company:</strong> Granite City Food & Brewery</p>
+                </div>
+                <div class="project-card-back">
         <p><strong>Role:</strong> IT Field Support Technician</p>
         <p><strong>Summary:</strong> Led a vendor transition project to migrate restaurant devices from Maas360 to Jamf, improving device management and reducing IT operational costs by 10%.</p>
         <ul>
@@ -51,7 +110,7 @@
     </div>
 
     <!-- Jamf Cloud Migration -->
-    <div class="project">
+   <!-- <div class="project">
         <h3>Cloud Migration Project</h3>
         <p><strong>Company:</strong> Jamf Software LLC</p>
         <p><strong>Role:</strong> Professional Services Project Manager</p>
@@ -67,7 +126,7 @@
     </div>
 
     <!-- Jamf Vendor Transition -->
-    <div class="project">
+   <!-- <div class="project">
         <h3>Vendor Transition Project</h3>
         <p><strong>Company:</strong> Jamf Software LLC</p>
         <p><strong>Role:</strong> Operations Project Manager</p>
@@ -87,7 +146,7 @@
     <h2>Contact Me</h2>
     <p>Email: <a href="mailto:trushaun.bell1@gmail.com">trushaun.bell1@gmail.com</a></p>
     <p>LinkedIn: <a href="https://linkedin.com/in/trubell-techpm" target="_blank">linkedin.com/in/trubell-techpm</a></p>
-</section>
+</section> -->
 
 </body>
 </html>
