Adding Navigation bar

--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
     </style>
 </head>
 <body>
+    <nav class="navbar">
+    <ul>
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+</nav>
+
     <header>
         <h1>Welcome to My Portfolio</h1>
         <p>Your tagline here</p>
