Adding contact info and relocating navigation bar

--- a/index.html
+++ b/index.html
@@ -25,18 +25,17 @@
     </style>
 </head>
 <body>
-    <nav class="navbar">
+    <header>
+        <h1>Welcome to My Portfolio</h1>
+        <p>Your tagline here</p>
+    </header>
+        <nav class="navbar">
     <ul>
         <li><a href="#about">About Me</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
     </ul>
 </nav>
-
-    <header>
-        <h1>Welcome to My Portfolio</h1>
-        <p>Your tagline here</p>
-    </header>
     <section id="about">
     <h2>About Me</h2>
     <p>Hello! I’m a dedicated project manager with experience in IT, vendor transitions, and process improvement. I’m passionate about delivering results and driving efficiency.</p>
@@ -110,6 +109,11 @@
         </div>
 
     </div>
+</section>
+   <section id="contact">
+    <h2>Contact Me</h2>
+    <p>Email: <a href="mailto:trushaun.bell1@gmail.com">trushaun.bell1@gmail.com</a></p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/trubell-techpm" target="_blank">linkedin.com/in/trubell-techpm</a></p>
 </section>
 
    <!-- <section id="projects">
