--- a/index.html
+++ b/index.html
@@ -1,144 +1,170 @@
-/* General Styles */
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-    color: #333;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="Style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        header, section {
+            padding: 20px;
+            text-align: center;
+        }
+        header {
+            background-color: #333;
+            color: white;
+        }
+        section {
+            border-bottom: 1px solid #ccc;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Welcome to My Portfolio</h1>
+        <p>Your tagline here</p>
+    </header>
+        <nav class="navbar">
+    <ul>
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+</nav>
+    <section id="about">
+    <h2>About Me</h2>
+    <p>Hello! I’m a dedicated project manager with experience in IT, vendor transitions, and process improvement. I’m passionate about delivering results and driving efficiency.</p>
+</section>
+    
+    <section id="projects">
+    <h2>Projects</h2>
+    <div class="projects-container">
 
-h1, h2 {
-    text-align: center;
-    color: #444;
-}
+        <!-- Granite City Project -->
+        <div class="project-card">
+            <div class="project-card-inner">
+                <div class="project-card-front">
+                    <h3>Vendor Transition Project</h3>
+                    <p>Granite City Food & Brewery</p>
+                </div>
+                <div class="project-card-back">
+                    <h4>Details:</h4>
+                    <p><strong>Role:</strong> IT Field Support Technician</p>
+                    <p><strong>Summary:</strong> Migrated restaurant devices from Maas360 to Jamf, improving device management and reducing IT operational costs.</p>
+                    <ul>
+                        <li>Identified lack of remote device management capabilities.</li>
+                        <li>Proposed and led proof-of-concept evaluations.</li>
+                        <li>Developed rollout plans across 30+ locations.</li>
+                    </ul>
+                    <p><strong>Results:</strong> Improved restaurant operations by 15% and reduced IT costs by 10%.</p>
+                </div>
+            </div>
+        </div>
 
-section {
-    padding: 20px;
-}
+        <!-- Jamf Cloud Migration -->
+        <div class="project-card">
+            <div class="project-card-inner">
+                <div class="project-card-front">
+                    <h3>Cloud Migration Project</h3>
+                    <p>Jamf Software LLC</p>
+                </div>
+                <div class="project-card-back">
+                    <h4>Details:</h4>
+                    <p><strong>Role:</strong> Professional Services Project Manager</p>
+                    <p><strong>Summary:</strong> Migrated on-premise database server and 10,000+ devices to Jamf Cloud.</p>
+                    <ul>
+                        <li>Suggested additional services for device and user management best practices.</li>
+                        <li>Generated $250,000 in sales through upselling services.</li>
+                        <li>Maintained stakeholder communication to ensure project delivery on schedule.</li>
+                    </ul>
+                    <p><strong>Tools Used:</strong> AWS, Jira, Confluence, Salesforce.</p>
+                </div>
+            </div>
+        </div>
 
-/* Card Container */
-.projects-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-    padding: 20px;
-}
+        <!-- Jamf Vendor Transition -->
+        <div class="project-card">
+            <div class="project-card-inner">
+                <div class="project-card-front">
+                    <h3>Vendor Transition Project</h3>
+                    <p>Jamf Software LLC</p>
+                </div>
+                <div class="project-card-back">
+                    <h4>Details:</h4>
+                    <p><strong>Role:</strong> Operations Project Manager</p>
+                    <p><strong>Summary:</strong> Migrated project management software from Jira Cloud to ServiceNow PPM, streamlining ticketing processes.</p>
+                    <ul>
+                        <li>Collaborated with ServiceNow engineers to build dashboards.</li>
+                        <li>Developed and presented reports to C-level executives.</li>
+                        <li>Trained end users and created documentation for best practices.</li>
+                    </ul>
+                    <p><strong>Tools Used:</strong> Agile, Jira, ServiceNow PPM.</p>
+                </div>
+            </div>
+        </div>
 
-/* Card Styles */
-.project-card {
-    perspective: 1000px;
-    width: 600px; /* 4:3 ratio width */
-    height: 450px; /* 4:3 ratio height */
-    margin: 10px auto;
-    overflow: hidden; /* Prevent content overflow */
-}
+    </div>
+</section>
+   <section id="contact">
+    <h2>Contact Me</h2>
+    <p>Email: <a href="mailto:trushaun.bell1@gmail.com">trushaun.bell1@gmail.com</a></p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/trubell-techpm" target="_blank">linkedin.com/in/trubell-techpm</a></p>
+</section>
 
-.project-card-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-}
+   <!-- <section id="projects">
+    <h2>Projects</h2>
+    <div class="projects-container">
 
-.project-card:hover .project-card-inner {
-    transform: rotateY(180deg);
-}
+        <!-- Granite City Project 
+        <div class="project-card">
+            <div class="project-card-inner">
+                <div class="project-card-front">
+                    <h3>Vendor Transition Project</h3>
+                    <p>Granite City Food & Brewery</p>
+                </div>
+                <div class="project-card-back">
+                    <p>Improved device management and reduced IT operational costs by 10%.</p>
+                    <p>Role: IT Field Support Technician</p>
+                </div>
+            </div>
+        </div>
 
-/* Front and Back Styles */
-.project-card-front, .project-card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%; /* Matches the height of the card */
-    backface-visibility: hidden;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    background-color: #fff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    overflow-y: auto; /* Enable scrolling for longer content */
-}
+        <!-- Jamf Cloud Migration 
+        <div class="project-card">
+            <div class="project-card-inner">
+                <div class="project-card-front">
+                    <h3>Cloud Migration Project</h3>
+                    <p>Jamf Software LLC</p>
+                </div>
+                <div class="project-card-back">
+                    <p>Successfully migrated 10,000+ devices and generated $250,000 in sales.</p>
+                    <p>Role: Professional Services Project Manager</p>
+                </div>
+            </div>
+        </div>
 
-.project-card-back {
-    transform: rotateY(180deg);
-    background-color: #f9f9f9;
-    color: #333;
-    text-align: left; /* Aligns all text on the back to the left */
-}
+        <!-- Jamf Vendor Transition 
+        <div class="project-card">
+            <div class="project-card-inner">
+                <div class="project-card-front">
+                    <h3>Vendor Transition Project</h3>
+                    <p>Jamf Software LLC</p>
+                </div>
+                <div class="project-card-back">
+                    <p>Migrated to ServiceNow PPM, streamlining operations.</p>
+                    <p>Role: Operations Project Manager</p>
+                </div>
+            </div>
+        </div>
 
-/* Specific Fix for Bullet Points */
-.project-card-back ul {
-    text-align: left; /* Align bullets and text to the left */
-    padding-left: 20px; /* Adds space between bullets and the card edge */
-}
+    </div>
+</section> -->
 
-.project-card-back ul li {
-    margin-bottom: 8px; /* Adds consistent spacing between bullet points */
-}
 
-/* Navigation Bar */
-.navbar {
-    background-color: #333;
-    padding: 10px 0;
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-    width: 100%;
-    text-align: center;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-}
-
-.navbar ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-}
-
-.navbar ul li {
-    display: inline;
-}
-
-.navbar ul li a {
-    text-decoration: none;
-    color: white;
-    font-size: 18px;
-    font-weight: bold;
-    padding: 10px 15px;
-    transition: background-color 0.3s;
-}
-
-.navbar ul li a:hover {
-    background-color: #555;
-    border-radius: 5px;
-}
-
-/* Mobile Styles for Cards */
-@media (max-width: 768px) {
-    .project-card {
-        width: 90%; /* Keep the width proportional to the screen */
-        height: auto; /* Let the height adjust dynamically */
-    }
-
-    .project-card-front, .project-card-back {
-        padding: 20px;
-        font-size: 16px;
-    }
-
-    .project-card-inner {
-        height: 100%; /* Ensure inner content adjusts to the card height */
-    }
-}
-
-/* Scrolling for Overflowing Content */
-.project-card-back {
-    overflow-y: auto; /* Enable scrolling for longer content */
-}
+</body>
+</html>
