--- a/index.html
+++ b/index.html
@@ -1,120 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="Style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-        header, section {
-            padding: 20px;
-            text-align: center;
-        }
-        header {
-            background-color: #333;
-            color: white;
-        }
-        section {
-            border-bottom: 1px solid #ccc;
-        }
-    </style>
+    <title>Project Portfolio</title>
+    <!-- Swiper.js CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Header -->
     <header>
         <h1>Welcome to My Portfolio</h1>
-        <p>Your tagline here</p>
+        <p>Showcasing my work and achievements in project management.</p>
     </header>
-        <nav class="navbar">
-    <ul>
-        <li><a href="#about">About Me</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-    </ul>
-</nav>
+
+    <!-- Navigation -->
+    <nav class="navbar">
+        <ul>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
+    <!-- About Me Section -->
     <section id="about">
-    <h2>About Me</h2>
-    <p>Hello! I’m a dedicated project manager with experience in IT, vendor transitions, and process improvement. I’m passionate about delivering results and driving efficiency.</p>
-</section>
-    
+        <h2>About Me</h2>
+        <p>I am a dedicated project manager with experience in IT, process improvement, and vendor transitions.</p>
+    </section>
+
+    <!-- Projects Section -->
     <section id="projects">
-    <h2>Projects</h2>
-    <div class="projects-container">
-
-        <!-- Granite City Project -->
-        <div class="project-card">
-            <div class="project-card-inner">
-                <div class="project-card-front">
+        <h2>Projects</h2>
+        <!-- Swiper Container -->
+        <div class="swiper">
+            <div class="swiper-wrapper">
+                <!-- Slide 1 -->
+                <div class="swiper-slide">
                     <h3>Vendor Transition Project</h3>
-                    <p>Granite City Food & Brewery</p>
-                </div>
-                <div class="project-card-back">
-                    <h4>Details:</h4>
-                    <p><strong>Role:</strong> IT Field Support Technician</p>
-                    <p><strong>Summary:</strong> Migrated restaurant devices from Maas360 to Jamf, improving device management and reducing IT operational costs.</p>
+                    <p><strong>Company:</strong> Granite City Food & Brewery</p>
+                    <p><strong>Summary:</strong> Migrated devices from Maas360 to Jamf, reducing IT costs by 10%.</p>
                     <ul>
-                        <li>Identified lack of remote device management capabilities.</li>
+                        <li>Identified lack of device management capabilities.</li>
                         <li>Proposed and led proof-of-concept evaluations.</li>
-                        <li>Developed rollout plans across 30+ locations.</li>
+                        <li>Developed rollout plans for 30+ locations.</li>
                     </ul>
-                    <p><strong>Results:</strong> Improved restaurant operations by 15% and reduced IT costs by 10%.</p>
                 </div>
-            </div>
-        </div>
 
-        <!-- Jamf Cloud Migration -->
-        <div class="project-card">
-            <div class="project-card-inner">
-                <div class="project-card-front">
+                <!-- Slide 2 -->
+                <div class="swiper-slide">
                     <h3>Cloud Migration Project</h3>
-                    <p>Jamf Software LLC</p>
-                </div>
-                <div class="project-card-back">
-                    <h4>Details:</h4>
-                    <p><strong>Role:</strong> Professional Services Project Manager</p>
-                    <p><strong>Summary:</strong> Migrated on-premise database server and 10,000+ devices to Jamf Cloud.</p>
+                    <p><strong>Company:</strong> Jamf Software LLC</p>
+                    <p><strong>Summary:</strong> Migrated 10,000+ devices to Jamf Cloud, generating $250,000 in additional sales.</p>
                     <ul>
-                        <li>Suggested additional services for device and user management best practices.</li>
-                        <li>Generated $250,000 in sales through upselling services.</li>
-                        <li>Maintained stakeholder communication to ensure project delivery on schedule.</li>
+                        <li>Suggested additional services for better operations.</li>
+                        <li>Communicated with stakeholders for seamless delivery.</li>
                     </ul>
-                    <p><strong>Tools Used:</strong> AWS, Jira, Confluence, Salesforce.</p>
                 </div>
-            </div>
-        </div>
 
-        <!-- Jamf Vendor Transition -->
-        <div class="project-card">
-            <div class="project-card-inner">
-                <div class="project-card-front">
-                    <h3>Vendor Transition Project</h3>
-                    <p>Jamf Software LLC</p>
-                </div>
-                <div class="project-card-back">
-                    <h4>Details:</h4>
-                    <p><strong>Role:</strong> Operations Project Manager</p>
-                    <p><strong>Summary:</strong> Migrated project management software from Jira Cloud to ServiceNow PPM, streamlining ticketing processes.</p>
-                    <ul>
-                        <li>Collaborated with ServiceNow engineers to build dashboards.</li>
-                        <li>Developed and presented reports to C-level executives.</li>
-                        <li>Trained end users and created documentation for best practices.</li>
-                    </ul>
-                    <p><strong>Tools Used:</strong> Agile, Jira, ServiceNow PPM.</p>
-                </div>
+                <!-- Add more slides as needed -->
             </div>
+            <!-- Pagination -->
+            <div class="swiper-pagination"></div>
+            <!-- Navigation Buttons -->
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
         </div>
+    </section>
 
-    </div>
-</section>
-   <section id="contact">
-    <h2>Contact Me</h2>
-    <p>Email: <a href="mailto:trushaun.bell1@gmail.com">trushaun.bell1@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/trubell-techpm" target="_blank">linkedin.com/in/trubell-techpm</a></p>
-</section>
+    <!-- Contact Section -->
+    <section id="contact">
+        <h2>Contact Me</h2>
+            <p>Email: <a href="mailto:trushaun.bell1@gmail.com">trushaun.bell1@gmail.com</a></p>
+            <p>LinkedIn: <a href="https://linkedin.com/in/trubell-techpm" target="_blank">linkedin.com/in/trubell-techpm</a></p>
+    </section>
+
+    <!-- Swiper.js JavaScript -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <!-- Initialize Swiper -->
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const swiper = new Swiper('.swiper', {
+                loop: true,
+                pagination: {
+                    el: '.swiper-pagination',
+                    clickable: true,
+                },
+                navigation: {
+                    nextEl: '.swiper-button-next',
+                    prevEl: '.swiper-button-prev',
+                },
+            });
+        });
+    </script>
+</body>
+</html>
+
 
    <!-- <section id="projects">
     <h2>Projects</h2>
