--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
                 <div class="swiper-slide">
                     <h3>Vendor Transition Project</h3>
                     <p><strong>Company:</strong> Granite City Food & Brewery</p>
-                    <p><strong>Summary:</strong> Migrated devices from Maas360 to Jamf, </p>
-                    <p>reducing IT costs by 10%.</p>
+                    <p><strong>Summary:</strong> Migrated devices from Maas360 to Jamf, reducing IT costs by 10%.</p>
                     <ul>
                         <li>Identified lack of device management capabilities.</li>
                         <li>Proposed and led proof-of-concept evaluations.</li>
