--- a/index.html
+++ b/index.html
@@ -82,18 +82,19 @@
     <!-- Initialize Swiper -->
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            const swiper = new Swiper('.swiper', {
-                loop: true,
-                pagination: {
-                    el: '.swiper-pagination',
-                    clickable: true,
-                },
-                navigation: {
-                    nextEl: '.swiper-button-next',
-                    prevEl: '.swiper-button-prev',
-                },
-            });
-        });
+    const swiper = new Swiper('.swiper', {
+        loop: true,
+        pagination: {
+            el: '.swiper-pagination',
+            clickable: true,
+        },
+        slidesPerView: 1, // Ensure one slide is fully visible
+        spaceBetween: 0,  // Remove any extra space between slides
+        centeredSlides: false, // Prevent centering of slides which can cause sticking
+        resistance: false, // Reduce "drag resistance" when swiping
+        resistanceRatio: 0, // Completely disable resistance effect
+    });
+});
     </script>
 </body>
 </html>
