--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
         document.addEventListener('DOMContentLoaded', () => {
     const swiper = new Swiper('.swiper', {
         loop: true,
+        navigation: {
+            nextEl: '.swiper-button-next',
+            prevEl: '.swiper-button-prev',
+        },
         pagination: {
             el: '.swiper-pagination',
             clickable: true,
