Update index.html - adding tagline class for css updates

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Header -->
     <header>
         <h1>Welcome to My Portfolio</h1>
-        <p>Showcasing my work and achievements in project management.</p>
+        <p class="tagline">Showcasing my work and achievements in project management.</p>
     </header>
 
     <!-- Navigation -->
