Update index.html - adding more projects to portfolio

--- a/index.html
+++ b/index.html
@@ -59,6 +59,56 @@
                         <li>Communicated with stakeholders for seamless delivery.</li>
                     </ul>
                 </div>
+                  <!-- Slide 3 -->
+                <div class="swiper-slide">
+                    <h3>Vendor Transition Project</h3>
+                    <p><strong>Company:</strong> Jamf Software LLC</p>
+                    <p><strong>Summary:</strong> Migrated 10,000+ devices to Jamf Cloud, generating $250,000 in additional sales.</p>
+                    <ul>
+                        <li>Suggested additional services for better operations.</li>
+                        <li>Communicated with stakeholders for seamless delivery.</li>
+                    </ul>
+                </div>
+                  <!-- Slide 4 -->
+                <div class="swiper-slide">
+                    <h3>Application Development Project</h3>
+                    <p><strong>Company:</strong>Chicago Trading Company</p>
+                    <p><strong>Summary:</strong> Migrated 10,000+ devices to Jamf Cloud, generating $250,000 in additional sales.</p>
+                    <ul>
+                        <li>Suggested additional services for better operations.</li>
+                        <li>Communicated with stakeholders for seamless delivery.</li>
+                    </ul>
+                </div>
+                  <!-- Slide 5 -->
+                <div class="swiper-slide">
+                    <h3>Database Migration Project</h3>
+                    <p><strong>Company:</strong>Chicago Trading Company</p>
+                    <p><strong>Summary:</strong> Migrated 10,000+ devices to Jamf Cloud, generating $250,000 in additional sales.</p>
+                    <ul>
+                        <li>Suggested additional services for better operations.</li>
+                        <li>Communicated with stakeholders for seamless delivery.</li>
+                    </ul>
+                </div>
+                  <!-- Slide 6 -->
+                <div class="swiper-slide">
+                    <h3>Application Development Project</h3>
+                    <p><strong>Company:</strong> Jamf Software LLC</p>
+                    <p><strong>Summary:</strong> Migrated 10,000+ devices to Jamf Cloud, generating $250,000 in additional sales.</p>
+                    <ul>
+                        <li>Suggested additional services for better operations.</li>
+                        <li>Communicated with stakeholders for seamless delivery.</li>
+                    </ul>
+                </div>
+                  <!-- Slide 7 -->
+                <div class="swiper-slide">
+                    <h3>Website Enhancement Project</h3>
+                    <p><strong>Company:</strong>University of Illinois</p>
+                    <p><strong>Summary:</strong> Migrated 10,000+ devices to Jamf Cloud, generating $250,000 in additional sales.</p>
+                    <ul>
+                        <li>Suggested additional services for better operations.</li>
+                        <li>Communicated with stakeholders for seamless delivery.</li>
+                    </ul>
+                </div>
 
                 <!-- Add more slides as needed -->
             </div>
