Update index.html - adding content to webpage

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
     <!-- About Me Section -->
     <section id="about">
         <h2>About Me</h2>
-        <p>I am a dedicated project manager with experience in IT, process improvement, and vendor transitions.</p>
+        <p>I’m an IT project manager with over 5 years of experience delivering successful projects across industries like software, finance, and education. My expertise includes application development, integration, and server migrations, as well as process improvement and change management. I’m passionate about creating efficient workflows and empowering teams to deliver impactful results.</p>
+<p>What sets me apart is my focus on communication, transparency, and flexibility. I foster open dialogue, encourage team collaboration, and ensure alignment with organizational goals. By embracing adaptability and prioritizing value-driven deliverables, I consistently lead cross-functional teams to deliver projects on time, within scope, and on budget.</p>
+<p>I’ve led projects using all of the most common methodologies. What I’ve learned is that there isn’t a methodology that is better than the rest. What it comes down to is what works best for the project team that I’m working with.
+</p>
     </section>
 
     <!-- Projects Section -->
@@ -41,11 +44,19 @@
                 <div class="swiper-slide">
                     <h3>Vendor Transition Project</h3>
                     <p><strong>Company:</strong> Granite City Food & Brewery</p>
-                    <p><strong>Summary:</strong> Migrated devices from Maas360 to Jamf, reducing IT costs by 10%.</p>
+                    <p><strong>Role:</strong> IT Field Support Technician</p>
+                    <p><strong>Team Size:</strong> 25+ </p>
+                    <p><strong>Summary:</strong> Led a company-wide initiative to transition restaurant devices from Maas360 to Jamf, improving device management and reducing operational costs. This project sparked my passion for project management and laid the foundation for my career in the field.</p>
+                    <p><strong>Key Contributions</strong></p>
                     <ul>
-                        <li>Identified lack of device management capabilities.</li>
-                        <li>Proposed and led proof-of-concept evaluations.</li>
-                        <li>Developed rollout plans for 30+ locations.</li>
+                        <li>Proposed and gained approval for the project by presenting a proof of concept to C-level executives.</li>
+                        <li>Developed a company-wide deployment plan to implement new device profiles across 30+ restaurant locations.</li>
+                        <li>Created communication strategies and training materials to support a smooth transition.</li>
+                    </ul>
+                    <p><strong> Results</strong></p>
+                    <ul>
+                        <li>Improved remote device management, increasing operational efficiency by 15%.</li>
+                        <li>Reduced IT costs by 10%, demonstrating the value of strategic project planning.</li>
                     </ul>
                 </div>
 
