Update index.html - adding the rest of the project card content

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <p><strong>Company:</strong> Granite City Food & Brewery</p>
                     <p><strong>Role:</strong> IT Field Support Technician</p>
                     <p><strong>Team Size:</strong> 25+ </p>
-                    <p><strong>Summary:</strong> Led a company-wide initiative to transition restaurant devices from Maas360 to Jamf, improving device management and reducing operational costs. This project sparked my passion for project management and laid the foundation for my career in the field.</p>
+                    <p><strong>Summary:</strong> Championed a company-wide initiative to transition restaurant devices from Maas360 to Jamf, improving device management and reducing operational costs. This project sparked my passion for project management and laid the foundation for my career in the field.</p>
                     <p><strong>Key Contributions</strong></p>
                     <ul>
                         <li>Proposed and gained approval for the project by presenting a proof of concept to C-level executives.</li>
@@ -63,63 +63,97 @@
                 <!-- Slide 2 -->
                 <div class="swiper-slide">
                     <h3>Cloud Migration Project</h3>
-                    <p><strong>Company:</strong> Jamf Software LLC</p>
-                    <p><strong>Summary:</strong> Migrated 10,000+ devices to Jamf Cloud, generating $250,000 in additional sales.</p>
+                    <p><strong>Company:</strong> Jamf Holdings</p>
+                    <p><strong>Role:</strong> Professional Services Project Manager</p>
+                    <p><strong>Team Size:</strong> 10-12 </p>
+                    <p><strong>Summary:</strong> Led the migration of on-premise database servers to Jamf Cloud, managing 10,000+ Apple devices and automating workflows to eliminate manual processes.</p>
+                    <p><strong>Key Contributions</strong></p>
                     <ul>
-                        <li>Suggested additional services for better operations.</li>
-                        <li>Communicated with stakeholders for seamless delivery.</li>
+                        <li>Developed and implemented a seamless migration strategy for database and devices. </li>
+                        <li>Proposed additional services for best practices in device and user management, resulting in improved client operations.</li>
+                        <li>Communicated progress and milestones effectively with external stakeholders to ensure timely project delivery.</li>
                     </ul>
+                    <p><strong> Results</strong></p>
+                    <ul>
+                        <li>Successfully migrated 10,000+ devices to Jamf Cloud.</li>
+                        <li>Generated $250,000 in additional sales through proposed service enhancements.
+                        </li>
+                    </ul>
+                </div>
                 </div>
                   <!-- Slide 3 -->
                 <div class="swiper-slide">
                     <h3>Vendor Transition Project</h3>
-                    <p><strong>Company:</strong> Jamf Software LLC</p>
-                    <p><strong>Summary:</strong> Migrated 10,000+ devices to Jamf Cloud, generating $250,000 in additional sales.</p>
+                    <p><strong>Company:</strong> Jamf Holdings</p>
+                    <p><strong>Role:</strong> Operations Project Manager</p>
+                    <p><strong>Team Size:</strong> 20-25 </p>
+                    <p><strong>Summary:</strong> Orchestrated the transition from Jira Cloud to ServiceNow PPM, streamlining project management and desktop support operations across the organization.</p>
+                    <p><strong>Key Contributions</strong></p>
                     <ul>
-                        <li>Suggested additional services for better operations.</li>
-                        <li>Communicated with stakeholders for seamless delivery.</li>
+                        <li>Oversaw database migration and collaborated with engineers to create real-time dashboards. </li>
+                        <li>Delivered detailed presentations to leadership, highlighting risks, milestones, and progress.</li>
+                        <li>Conducted training sessions and created reference documentation to support end-user adoption.</li>
+                    </ul>
+                    <p><strong> Results</strong></p>
+                    <ul>
+                        <li>Improved project and help desk processes by 15% through successful migration.</li>
                     </ul>
                 </div>
                   <!-- Slide 4 -->
                 <div class="swiper-slide">
-                    <h3>Application Development Project</h3>
-                    <p><strong>Company:</strong>Chicago Trading Company</p>
-                    <p><strong>Summary:</strong> Migrated 10,000+ devices to Jamf Cloud, generating $250,000 in additional sales.</p>
+                    <h3>Splunk Migration Project</h3>
+                    <p><strong>Company:</strong> Chicago Trading Company</p>
+                    <p><strong>Role:</strong> IT Project Manager</p>
+                    <p><strong>Team Size:</strong> 25+ </p>
+                    <p><strong>Summary:</strong> Managed the migration of on-premise data servers to Splunk Cloud, enhancing data observability tools for developers and improving outage prevention.</p>
+                    <p><strong>Key Contributions</strong></p>
                     <ul>
-                        <li>Suggested additional services for better operations.</li>
-                        <li>Communicated with stakeholders for seamless delivery.</li>
+                        <li>Coordinated migration phases and decommissioned legacy servers to ensure smooth connectivity. </li>
+                        <li>Provided executives with regular milestone reports and presentations.</li>
+                        <li>Created reference guides and FAQs to streamline Splunk Cloud operations and reporting.</li>
+                    </ul>
+                    <p><strong> Results</strong></p>
+                    <ul>
+                        <li>Migrated 10 departments ahead of schedule, saving $150,000 in operational costs.</li>
+                        <li>Reduced out-of-market outages by 15% through enhanced system accessibility.</li>
                     </ul>
                 </div>
                   <!-- Slide 5 -->
                 <div class="swiper-slide">
-                    <h3>Database Migration Project</h3>
-                    <p><strong>Company:</strong>Chicago Trading Company</p>
-                    <p><strong>Summary:</strong> Migrated 10,000+ devices to Jamf Cloud, generating $250,000 in additional sales.</p>
+                   <h3>Vendor Integration Project</h3>
+                    <p><strong>Company:</strong> Chicago Trading Company</p>
+                    <p><strong>Role:</strong> IT Project Manager</p>
+                    <p><strong>Team Size:</strong> 15-20 </p>
+                    <p><strong>Summary:</strong> Managed the integration of a third-party vendor’s proprietary software into CTC’s tech stack, enabling $3M in potential revenue.</p>
+                    <p><strong>Key Contributions</strong></p>
                     <ul>
-                        <li>Suggested additional services for better operations.</li>
-                        <li>Communicated with stakeholders for seamless delivery.</li>
+                        <li>Conducted a proof of concept to secure executive buy-in for the project. </li>
+                        <li>Led contract negotiations to align project deliverables with stakeholder expectations.</li>
+                        <li>Facilitated regular updates between internal and external stakeholders on project progress and milestone completion.</li>
+                    </ul>
+                    <p><strong> Results</strong></p>
+                    <ul>
+                        <li>Delivered project ahead of schedule, recording the first transaction in December 2023.</li>
                     </ul>
                 </div>
                   <!-- Slide 6 -->
                 <div class="swiper-slide">
-                    <h3>Application Development Project</h3>
-                    <p><strong>Company:</strong> Jamf Software LLC</p>
-                    <p><strong>Summary:</strong> Migrated 10,000+ devices to Jamf Cloud, generating $250,000 in additional sales.</p>
+                     <h3>Procurement Code Standardization Project</h3>
+                    <p><strong>Company:</strong> University of Illinois </p>
+                    <p><strong>Role:</strong> IT Project Manager</p>
+                    <p><strong>Team Size:</strong> 15-20 </p>
+                    <p><strong>Summary:</strong> Coordinated the updating and standardization of NIGP commodity codes to enhance user experience and improve reporting across the University’s purchasing platforms.</p>
+                    <p><strong>Key Contributions</strong></p>
                     <ul>
-                        <li>Suggested additional services for better operations.</li>
-                        <li>Communicated with stakeholders for seamless delivery.</li>
+                        <li>Implemented a change management process for adding new commodity codes. </li>
+                        <li>LEnsured consistency of commodity codes across multiple platforms through team collaboration.</li>
+                        <li>Negotiated a cost-saving contract to use Illinois State’s subscription for NIGP codes.</li>
                     </ul>
-                </div>
-                  <!-- Slide 7 -->
-                <div class="swiper-slide">
-                    <h3>Website Enhancement Project</h3>
-                    <p><strong>Company:</strong>University of Illinois</p>
-                    <p><strong>Summary:</strong> Migrated 10,000+ devices to Jamf Cloud, generating $250,000 in additional sales.</p>
+                    <p><strong> Results</strong></p>
                     <ul>
-                        <li>Suggested additional services for better operations.</li>
-                        <li>Communicated with stakeholders for seamless delivery.</li>
+                        <li>Eliminated outdated codes and improved system efficiency under budget.</li>
                     </ul>
-                </div>
+                </div>   
 
                 <!-- Add more slides as needed -->
             </div>
