Update index.html - adding quotes and Companies I've worked for.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,19 @@
 <p>I’ve led projects using all of the most common methodologies. What I’ve learned is that there isn’t a methodology that is better than the rest. What it comes down to is what works best for the project team that I’m working with.
 </p>
     </section>
+    <section id="Quotes">
+        <h2>Qoutes I Live By</h2>
+        <blockquote id="Fortune">"Fortune favors the bold."</blockquote>
+        <blockquote id="Why">"Why not us?"</blockquote>
+        <blockquote id="Chaos">"Chaos is just a problem seeking a solution."</blockquote>
+        <blockquote id="Comms">"Communication opens the door to infinite possibilities."</blockquote>
+    </section>
+
+    <section id="companies">
+        <h2>Companies I've worked with</h2>
+        <!-- Add company logos in this section -->
+    </section>
+    
 
     <!-- Projects Section -->
     <section id="projects">
