--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trushaun Bell</title>
-    <link rel=""icon" href="Images/favicon.png" type="image/png">
+    <link rel="icon" href="ProjectPortfolio/Images/favicon.png" type="image/png">
     <!-- Swiper.js CSS -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <!-- Custom CSS -->
