--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
 <body>
     <!-- Header -->
     <header>
-        <h1>Welcome to My Portfolio</h1>
+        <div class="header-container">
+            <img src="Images/WaterfallTru.jpeg" alt="Trushaun Bell" class="header-pic">
+            <div class="header-text">
+                <h1>Trushaun Bell</h1>
+                <p class="title">IT Project Manager</p>
+            </div>
+        </div>
         <p class="tagline">Showcasing my work and achievements in project management.</p>
     </header>
 
