Editing font and size of quotes

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
     </section>
     <section id="Quotes">
         <h2>Qoutes I Live By</h2>
-        <blockquote id="Fortune">"Fortune favors the bold."</blockquote>
-        <blockquote id="Why">"Why not us?"</blockquote>
-        <blockquote id="Chaos">"Chaos is just a problem seeking a solution."</blockquote>
-        <blockquote id="Comms">"Communication opens the door to infinite possibilities."</blockquote>
+        <blockquote id="cQuote">"Fortune favors the bold."</blockquote>
+        <blockquote id="cQuote">"Why not us?"</blockquote>
+        <blockquote id="cQuote">"Chaos is just a problem seeking a solution."</blockquote>
+        <blockquote id="cQuote">"Communication opens the door to infinite possibilities."</blockquote>
     </section>
 
     <section id="companies">
