Changed to quotes

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </p>
     </section>
     <section id="Quotes">
-        <h2></h2>
+        <h2>My PM Mantras</h2>
         <blockquote id="cQuote">"Fortune favors the bold."</blockquote>
         <blockquote id="cQuote">"Why not us?"</blockquote>
         <blockquote id="cQuote">"Chaos is just a problem seeking a solution."</blockquote>
