changing nav bar location and functionality

--- a/index.html
+++ b/index.html
@@ -16,8 +16,16 @@
     <link rel="stylesheet" href="Style.css">
 </head>
 <body>
-    <!-- Header -->
+    
+    <!-- Header and Navigation -->
     <header>
+        <nav class="navbar">
+            <ul>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
         <div class="header-container">
             <img src="Images/WaterfallTru.jpeg" alt="Trushaun Bell" class="header-pic">
             <div class="header-text">
@@ -28,14 +36,7 @@
         </div>
     </header>
 
-    <!-- Navigation -->
-    <nav class="navbar">
-        <ul>
-            <li><a href="#about">About Me</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
+   
 
     <!-- About Me Section -->
     <section id="about">
