changing spacing and adding quotes for webpage

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <img src="Images/WaterfallTru.jpeg" alt="Trushaun Bell" class="header-pic">
             <div class="header-text">
                 <h1>Trushaun Bell</h1>
-                <p class="title">IT Project Manager</p>
+                <p class="title">Technical Project/Program Manager</p>
                 <p class="tagline">Showcasing my work and achievements in project management.</p>
             </div>
         </div>
@@ -48,10 +48,11 @@
     </section>
     <section id="Quotes">
         <h2>My PM Mantras</h2>
-        <blockquote id="cQuote">"Fortune favors the bold."</blockquote>
-        <blockquote id="cQuote">"Why not us?"</blockquote>
-        <blockquote id="cQuote">"Chaos is just a problem seeking a solution."</blockquote>
-        <blockquote id="cQuote">"Communication opens the door to infinite possibilities."</blockquote>
+        <blockquote id="cQuote">FORTUNE FAVORS THE BOLD.</blockquote>
+        <blockquote id="cQuote">WE CAN DO ANYTHING WITH THE PROPER RESOURCES.</blockquote>
+        <blockquote id="cQuote">WE AREN'T JUST DELIVERING A PROJECT. WE ARE DELIVERING SOLUTIONS.</blockquote>
+        <blockquote id="cQuote">COMMUNICATION OPENS THE DOORS TO INFINITE POSSIBILITIES.</blockquote>
+        <blockquote id="cQuote">TEAMWORK MAKES THE DREAM WORK!</blockquote>
     </section>
 
     <section id="companies">
