changing alignment of sections

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <img src="Images/WaterfallTru.jpeg" alt="Trushaun Bell" class="header-pic">
             <div class="header-text">
                 <h1>Trushaun Bell</h1>
-                <p class="title">Technical Project/Program Manager</p>
-                <p class="tagline">Showcasing my work and achievements in project management.</p>
+                <p class="title">Technical Project Manager</p>
+                <p class="tagline"></p>
             </div>
         </div>
     </header>
@@ -42,9 +42,10 @@
     <section id="about">
         <h2>About Me</h2>
         <p>I’m an IT project manager with over 5 years of experience delivering successful projects across industries like software, finance, and education. My expertise includes application development, integration, and server migrations, as well as process improvement and change management. I’m passionate about creating efficient workflows and empowering teams to deliver impactful results.</p>
-<p>What sets me apart is my focus on communication, transparency, and flexibility. I foster open dialogue, encourage team collaboration, and ensure alignment with organizational goals. By embracing adaptability and prioritizing value-driven deliverables, I consistently lead cross-functional teams to deliver projects on time, within scope, and on budget.</p>
-<p>I’ve led projects using all of the most common methodologies. What I’ve learned is that there isn’t a methodology that is better than the rest. What it comes down to is what works best for the project team that I’m working with.
-</p>
+        <p>I’ve led projects using all of the most common methodologies. What I’ve learned is that there isn’t a methodology that is better than the rest. What it comes down to is what works best for the project team that I’m working with.
+        </p>
+        <p>What sets me apart is my focus on communication, transparency, and flexibility. I foster open dialogue, encourage team collaboration, and ensure alignment with organizational goals. By embracing adaptability and prioritizing value-driven deliverables, I consistently lead cross-functional teams to deliver projects on time, within scope, and on budget.</p>
+
     </section>
     <section id="Quotes">
         <h2>My PM Mantras</h2>
