adding photo to about me section to align on the right.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trushaun Bell</title>
+    <title>Trushaun "Tru" Bell</title>
     <!--- Font Style for Section titles-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,6 +41,7 @@
     <!-- About Me Section -->
     <section id="about">
         <h2>About Me</h2>
+        <img src="Images/TruBell.png" alt="Trushaun Bell" class="about-pic">
         <p>I’m an IT project manager with over 5 years of experience delivering successful projects across industries like software, finance, and education. My expertise includes application development, integration, and server migrations, as well as process improvement and change management. I’m passionate about creating efficient workflows and empowering teams to deliver impactful results.</p>
         <p>I’ve led projects using all of the most common methodologies. What I’ve learned is that there isn’t a methodology that is better than the rest. What it comes down to is what works best for the project team that I’m working with.
         </p>
